--- a/roles/node_exporter/templates/node_exporter_systemd.service.j2
+++ b/roles/node_exporter/templates/node_exporter_systemd.service.j2
@@ -8,7 +8,7 @@ User=node_exporter
 Group=node_exporter
 Type=simple
 EnvironmentFile=-/etc/sysconfig/node_exporter
-ExecStart=/metal/node_exporter/bin/node_exporter-1.7.0.linux-amd64/node_exporter
+ExecStart=/metal/node_exporter/bin/node_exporter-{{ node_exporter_version }}.linux-amd64/node_exporter --collector.ethtool --collector.perf -–collector.systemd –-collector.processes
 
 [Install]
 WantedBy=multi-user.target
